packages/example/content/boomerang-cicd/7.0.0/introduction/01.concepts.md
---
title: Key Concepts
index: 1
---

# Key Concepts

Boomerang CI there are some core concepts you will see throughout the UI and the documentation.

## Activity

A process that runs as part of CI and performs the steps based on the mode and configuration. Typical _activity_ types are `build`, `test`, `gates`, and `deploy`.

## Component

A generic term that references a mapping to a repository and the object or artifact level that moves through pipeline.

## Executors

The method by which the activities are orchestrated and executed. There are currently three types: `UrbanCode Deploy`, `Kubernetes`, and `Flow`.

## Mode

The key defining way to tell Boomerang CI what to do and allows you as the user to run activities in slightly different ways. It allows for specific functionality to be enabled based on the underlying technology and denotes the infrastructure where we will create, run, and terminate the distributed workers. See the table on [Modes and Properties](/boomerang-cicd/how-to-guide/modes-and-properties) to see the available modes.

## Pipeline

A collection of stages that run in sequence.

## Repositories

The list of SCM providers that we integrate with. Currently `GitHub` and `Gitlab`.

## Stage

A key step in the pipeline. A stage represents where the _activity_ is run against and also can map to an external deployment target or environment.

## Team

Your Boomearng CI team is created if / when you have access to CI. It is a construct to help organize the components and the pipeline is defined at this level.

## Triggers

The method by which a stage can be triggered. There is `webhook`, `manual`, and `after stage`.

## Color Designations

Across Boomerang CICD you will see the following colors represent a particular meaning and state; whether a component, a pipeline or a policy. The colors are:

- _gray_ - No prior activity. All newly added or created objects have this color trim.
- _blue_ - Activity currently being executed.
- _green_ - Successful completion of activity. For an Activity tile you can access the build logs. For a Pipeline tile you may have a Promote link to deploy into next Stage.
- _red_ - Unsuccessful completion of activity. For an Activity tile you can access the build logs. The Promote link will be hidden on the failed Stage preventing deployment.

## Quotas

Quotas are a team level restriction on both the number of components that can be added to a team but also the types of modes that can be used. A team can have anywhere from 1 to 100 components.