packages/example/content/boomerang-cicd/7.3.0/introduction/01.concepts.md
---
title: Key Concepts
index: 1
---

# Key concepts

In Boomerang CI, there are some core concepts you will see throughout the UI and the documentation.

## Activity

A process that runs as part of CI and performs the steps based on the mode and configuration. Typical _activity_ types are `build`, `test`, `gates`, and `deploy`.

## Component

A generic term that references a mapping to a repository and the object or artifact level that moves through the pipeline.

## Executors

The method by which the activities are orchestrated and executed. There are currently three types: `UrbanCode Deploy`, `Kubernetes`, and `Flow`. More information can be found in the [Worker Architecture](/boomerang-cicd/architecture/worker-and-executor-architecture)

## Mode

Mode is the principle way to tell Boomerang CICD what to do. It allows you, as the user, to run activities in slightly different ways. It allows for specific functionality to be enabled based on the underlying technology, and denotes the infrastructure where we will create, run, and terminate the distributed workers. See the table on [Modes and Properties](/boomerang-cicd/how-to-guide/modes-and-properties) the available modes.

## Pipeline

A collection of stages that run in sequence.

## Repositories

The list of SCM providers that we integrate with. Currently `GitHub` and `Gitlab`.

## Stage

A key step in the pipeline. A stage represents where the _activity_ is run against and also can map to an external deployment target or environment.

## Team

Your Boomearng CICD team is created if and when you have access. It is a construct to help organize the components. The pipeline is defined at this level.

## Triggers

The method by which a stage can be triggered. There is `webhook`, `manual`, and `after stage` triggers.

## Color designations

Across Boomerang CICD, the following colors represent a particular meaning and state, whether a component, a pipeline or a policy. The colors are:

- _gray_ - No prior activity. All newly added or created objects have this color trim.
- _blue_ - Activity currently being executed.
- _green_ - Successful completion of activity. For an Activity tile, you can access the build logs. For a Pipeline tile, you may have a Promote link to deploy into next Stage.
- _red_ - Unsuccessful completion of activity. For an Activity tile, you can access the build logs. The Promote link will be hidden on the failed Stage preventing deployment.

## Quotas

Quotas are a team level restriction on both the number of components that can be added to a team as well as the types of modes that can be used. A team can have anywhere from 1 to 100 components.

## Versioning

Boomerang CICD versioning is designed based on semantic versioning with the pattern of `major.minor.iteration` (for example, 1.1.0), along with additional labels such as `-alpha` or `-rc.1`. You can read about the additional labels for pre-release and build metadata extensions on the [semver](https://semver.org/) site.

In short, you:
- increment the iteration version (1.0.0 → 1.0.1) when you release bug fixes and backwards compatiable patches
- increment the minor version (1.3.2 → 1.4.0) when you add new features
- increment the major version (3.2.9 → 4.0.0) when you introduce breaking changes

## Build numbers

Boomerang CICD will automatically append `-BUILD#` to the version, such as `2.3.5-55`. When Boomerang CICD was first established, build numbers were a natural auto-increment feature for CI systems. Some years later, this was not necessarily the industry standard. As requested by our end users, this can be disabled with `build.number.append=false`

In a future release, we may adjust the appending of the build number to use proper semver2 notation with `+BUILD#`, for example, `2.3.5+55`